--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <label class="txt-label" for="search">Buscar:</label>
                     <div class="search">
                         <input type="text" name="search" class="box-search txt-form" />
-                        <input type="submit" class="btn-search txt-form" value="Buscar" />
+                        <input type="submit" class="btn-search txt-form-btn" value="Buscar" />
                     </div>
                 </div>
                 <div class="form-filter">
@@ -65,28 +65,83 @@
         <!--Main-->
         <main class="main">
             <!--Main/Container Grid-->
-            <section class="contanier-grid">
+            <section class="container-grid">
                 <!--Card-->
-                <div class="card bg-card">
+                <div class="card">
                     <!--Card/Header-->
                     <div class="card-header">
-                        <img src="#" class="card-img" alt="Destino">
+                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
                     </div>
                     <!--Card/Body-->
                     <div class="card-body">
-                        <h3 class="txt-subtitle-2">Nombre Lugar</h3>
-                        <p class="txt-card-info-1">País</p>
-                        <p class="txt-card-info-2">Descripción</p>
-                        <p class="txt-card-info-3">Precio</p>
+                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
+                        <p class="txt-card-info-1">País: México</p>
+                        <p class="txt-card-info-2">
+                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
+                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
+                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
+                            de México.</p>
+                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
                     </div>
                     <!--Card/Footer-->
                     <div class="card-footer">
-                        <button class="btn-card txt-btn">Ver más</button>
+                        <button class="card-btn txt-card-btn">Ver más</button>
+                    </div>
+                </div>
+                <!---->
+                <!--Card-->
+                <div class="card">
+                    <!--Card/Header-->
+                    <div class="card-header">
+                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
+                    </div>
+                    <!--Card/Body-->
+                    <div class="card-body">
+                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
+                        <p class="txt-card-info-1">País: México</p>
+                        <p class="txt-card-info-2">
+                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
+                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
+                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
+                            de México.</p>
+                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
+                    </div>
+                    <!--Card/Footer-->
+                    <div class="card-footer">
+                        <button class="card-btn txt-card-btn">Ver más</button>
+                    </div>
+                </div>
+                <!---->
+                 <!--Card-->
+                 <div class="card">
+                    <!--Card/Header-->
+                    <div class="card-header">
+                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
+                    </div>
+                    <!--Card/Body-->
+                    <div class="card-body">
+                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
+                        <p class="txt-card-info-1">País: México</p>
+                        <p class="txt-card-info-2">
+                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
+                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
+                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
+                            de México.</p>
+                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
+                    </div>
+                    <!--Card/Footer-->
+                    <div class="card-footer">
+                        <button class="card-btn txt-card-btn">Ver más</button>
                     </div>
                 </div>
                 <!---->
 
+
+
+
+
             </section>
+        
         </main>
         <!--Footer-->
         <footer class="footer">
