Avance 04: Html y css responsivo

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!--Navbar/Browser-->
         <section class="nav-browser">
             <div class="browser-title">
-                <h2 class="txt-subtitle-1">Busqueda Avanzada</h2>
+                <h2 class="txt-subtitle-1">Busqueda</h2>
             </div>
             <!--Navbar/Browser/Form-->
             <form action="" method="get" class="form">
@@ -135,13 +135,101 @@
                     </div>
                 </div>
                 <!---->
+                 <!--Card-->
+                 <div class="card">
+                    <!--Card/Header-->
+                    <div class="card-header">
+                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
+                    </div>
+                    <!--Card/Body-->
+                    <div class="card-body">
+                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
+                        <p class="txt-card-info-1">País: México</p>
+                        <p class="txt-card-info-2">
+                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
+                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
+                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
+                            de México.</p>
+                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
+                    </div>
+                    <!--Card/Footer-->
+                    <div class="card-footer">
+                        <button class="card-btn txt-card-btn">Ver más</button>
+                    </div>
+                </div>
+                <!---->
+                <!--Card-->
+                <div class="card">
+                    <!--Card/Header-->
+                    <div class="card-header">
+                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
+                    </div>
+                    <!--Card/Body-->
+                    <div class="card-body">
+                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
+                        <p class="txt-card-info-1">País: México</p>
+                        <p class="txt-card-info-2">
+                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
+                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
+                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
+                            de México.</p>
+                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
+                    </div>
+                    <!--Card/Footer-->
+                    <div class="card-footer">
+                        <button class="card-btn txt-card-btn">Ver más</button>
+                    </div>
+                </div>
+                <!---->
+                 <!--Card-->
+                 <div class="card">
+                    <!--Card/Header-->
+                    <div class="card-header">
+                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
+                    </div>
+                    <!--Card/Body-->
+                    <div class="card-body">
+                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
+                        <p class="txt-card-info-1">País: México</p>
+                        <p class="txt-card-info-2">
+                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
+                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
+                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
+                            de México.</p>
+                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
+                    </div>
+                    <!--Card/Footer-->
+                    <div class="card-footer">
+                        <button class="card-btn txt-card-btn">Ver más</button>
+                    </div>
+                </div>
+                <!---->
 
 
 
 
 
             </section>
-        
+            <!--Main/Index-->
+            <section class="container-index">
+                <ul class="index-menu">
+                    <li class="index-num index-start">
+                        <a class="txt-index" href="#"><<</a>
+                    </li>
+                    <li class="index-num">
+                        <a class="txt-index" href="#">1</a>
+                    </li>
+                    <li class="index-num">
+                        <a class="txt-index" href="#">2</a>
+                    </li>
+                    <li class="index-num">
+                        <a class="txt-index" href="#">3</a>
+                    </li>
+                    <li class="index-num index-end">
+                        <a class="txt-index" href="#">>></a>
+                    </li>
+                </ul>
+            </section>
         </main>
         <!--Footer-->
         <footer class="footer">
