--- a/contact.html
+++ b/contact.html
@@ -58,183 +58,30 @@
                         <input type="submit" class="btn-search txt-form-btn" value="Buscar" />
                     </div>
                 </div>
-                <div class="form-filter">
-                    <label class="txt-label" for="select">Ordenar por:</label>
-                    <select class="box-select txt-form" name="select">
-                        <option value="orden-az" selected>A--Z</option>
-                        <option value="orden-precio-menor">Precio Menor</option>
-                        <option value="orden-precio-mayor">Precio Mayor</option>
-                    </select>
-                </div>
             </form>
         </section>
         <!--Main-->
         <main class="main">
-            <!--Main/Container Grid-->
-            <section class="container-grid">
-                <!--Card-->
-                <div class="card">
-                    <!--Card/Header-->
-                    <div class="card-header">
-                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
+            <section class="front">
+                <div class="front-logo">
+                    <div class="front-logo-img">
+                        <img src="assets/imgs/logo-icon.png" alt="Logotipo">
                     </div>
-                    <!--Card/Body-->
-                    <div class="card-body">
-                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
-                        <p class="txt-card-info-1">País: México</p>
-                        <p class="txt-card-info-2">
-                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
-                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
-                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
-                            de México.</p>
-                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
-                    </div>
-                    <!--Card/Footer-->
-                    <div class="card-footer">
-                        <button class="card-btn txt-card-btn">Ver más</button>
-                    </div>
+                    <h1 class="txt-front-title-1">Turis<span class="txt-front-title-2">Mundo</span></h1>
                 </div>
-                <!---->
-                <!--Card-->
-                <div class="card">
-                    <!--Card/Header-->
-                    <div class="card-header">
-                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
-                    </div>
-                    <!--Card/Body-->
-                    <div class="card-body">
-                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
-                        <p class="txt-card-info-1">País: México</p>
-                        <p class="txt-card-info-2">
-                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
-                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
-                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
-                            de México.</p>
-                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
-                    </div>
-                    <!--Card/Footer-->
-                    <div class="card-footer">
-                        <button class="card-btn txt-card-btn">Ver más</button>
-                    </div>
+                <div class="front-info">
+                    <h3 class="txt-title-2">Contáctanos</h3>
+                    <br>
+                    <form action="" method="get" class="form-contact">
+                        <label class="txt-front" for="nombre">Nombre</label>
+                        <input type="text" name="nombre" class="box-data-1 txt-front"/>
+                        <br>
+                        <label class="txt-front" for="mensaje">Mensaje</label>
+                        <textarea class="box-data-1 txt-front" name="mensaje" cols="31" rows="20" placeholder="Escribenos aquí ..."></textarea>
+                        <br>
+                        <input type="submit" class="btn-send txt-front" value="Enviar" />
+                    </form>
                 </div>
-                <!---->
-                 <!--Card-->
-                 <div class="card">
-                    <!--Card/Header-->
-                    <div class="card-header">
-                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
-                    </div>
-                    <!--Card/Body-->
-                    <div class="card-body">
-                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
-                        <p class="txt-card-info-1">País: México</p>
-                        <p class="txt-card-info-2">
-                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
-                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
-                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
-                            de México.</p>
-                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
-                    </div>
-                    <!--Card/Footer-->
-                    <div class="card-footer">
-                        <button class="card-btn txt-card-btn">Ver más</button>
-                    </div>
-                </div>
-                <!---->
-                 <!--Card-->
-                 <div class="card">
-                    <!--Card/Header-->
-                    <div class="card-header">
-                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
-                    </div>
-                    <!--Card/Body-->
-                    <div class="card-body">
-                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
-                        <p class="txt-card-info-1">País: México</p>
-                        <p class="txt-card-info-2">
-                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
-                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
-                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
-                            de México.</p>
-                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
-                    </div>
-                    <!--Card/Footer-->
-                    <div class="card-footer">
-                        <button class="card-btn txt-card-btn">Ver más</button>
-                    </div>
-                </div>
-                <!---->
-                <!--Card-->
-                <div class="card">
-                    <!--Card/Header-->
-                    <div class="card-header">
-                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
-                    </div>
-                    <!--Card/Body-->
-                    <div class="card-body">
-                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
-                        <p class="txt-card-info-1">País: México</p>
-                        <p class="txt-card-info-2">
-                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
-                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
-                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
-                            de México.</p>
-                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
-                    </div>
-                    <!--Card/Footer-->
-                    <div class="card-footer">
-                        <button class="card-btn txt-card-btn">Ver más</button>
-                    </div>
-                </div>
-                <!---->
-                 <!--Card-->
-                 <div class="card">
-                    <!--Card/Header-->
-                    <div class="card-header">
-                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
-                    </div>
-                    <!--Card/Body-->
-                    <div class="card-body">
-                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
-                        <p class="txt-card-info-1">País: México</p>
-                        <p class="txt-card-info-2">
-                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
-                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
-                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
-                            de México.</p>
-                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
-                    </div>
-                    <!--Card/Footer-->
-                    <div class="card-footer">
-                        <button class="card-btn txt-card-btn">Ver más</button>
-                    </div>
-                </div>
-                <!---->
-
-
-
-
-
-            </section>
-            <!--Main/Index-->
-            <section class="container-index">
-                <ul class="index-menu">
-                    <li class="index-num index-start">
-                        <a class="txt-index" href="#"><<</a>
-                    </li>
-                    <li class="index-num">
-                        <a class="txt-index" href="#">1</a>
-                    </li>
-                    <li class="index-num">
-                        <a class="txt-index" href="#">2</a>
-                    </li>
-                    <li class="index-num">
-                        <a class="txt-index" href="#">3</a>
-                    </li>
-                    <li class="index-num index-end">
-                        <a class="txt-index" href="#">>></a>
-                    </li>
-                </ul>
             </section>
         </main>
         <!--Footer-->
