--- a/index.html
+++ b/index.html
@@ -58,183 +58,28 @@
                         <input type="submit" class="btn-search txt-form-btn" value="Buscar" />
                     </div>
                 </div>
-                <div class="form-filter">
-                    <label class="txt-label" for="select">Ordenar por:</label>
-                    <select class="box-select txt-form" name="select">
-                        <option value="orden-az" selected>A--Z</option>
-                        <option value="orden-precio-menor">Precio Menor</option>
-                        <option value="orden-precio-mayor">Precio Mayor</option>
-                    </select>
-                </div>
             </form>
         </section>
         <!--Main-->
         <main class="main">
-            <!--Main/Container Grid-->
-            <section class="container-grid">
-                <!--Card-->
-                <div class="card">
-                    <!--Card/Header-->
-                    <div class="card-header">
-                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
+            <section class="front">
+                <div class="front-logo">
+                    <div class="front-logo-img">
+                        <img src="assets/imgs/logo-icon.png" alt="Logotipo">
                     </div>
-                    <!--Card/Body-->
-                    <div class="card-body">
-                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
-                        <p class="txt-card-info-1">País: México</p>
-                        <p class="txt-card-info-2">
-                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
-                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
-                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
-                            de México.</p>
-                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
-                    </div>
-                    <!--Card/Footer-->
-                    <div class="card-footer">
-                        <button class="card-btn txt-card-btn">Ver más</button>
-                    </div>
+                    <h1 class="txt-front-title-1">Turis<span class="txt-front-title-2">Mundo</span></h1>
                 </div>
-                <!---->
-                <!--Card-->
-                <div class="card">
-                    <!--Card/Header-->
-                    <div class="card-header">
-                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
-                    </div>
-                    <!--Card/Body-->
-                    <div class="card-body">
-                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
-                        <p class="txt-card-info-1">País: México</p>
-                        <p class="txt-card-info-2">
-                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
-                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
-                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
-                            de México.</p>
-                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
-                    </div>
-                    <!--Card/Footer-->
-                    <div class="card-footer">
-                        <button class="card-btn txt-card-btn">Ver más</button>
-                    </div>
+                <div class="front-info">
+                    <h3 class="txt-title-2">Quiénes somos</h3>
+                    <br>
+                    <p class="txt-front">
+                        TurisMundo es una empresa, con una gran trayectoria en el manejo de cuentas 
+                        corporativas, y viajes de placer, reconocida en el mercado por sus años de experiencia, 
+                        ética profesional y un personal altamente calificado e idóneo para brindar una atención 
+                        personalizada, y una rigurosa selección de proveedores, lo que nos permite otorgar una 
+                        excelente calidad de servicio.
+                    </p>
                 </div>
-                <!---->
-                 <!--Card-->
-                 <div class="card">
-                    <!--Card/Header-->
-                    <div class="card-header">
-                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
-                    </div>
-                    <!--Card/Body-->
-                    <div class="card-body">
-                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
-                        <p class="txt-card-info-1">País: México</p>
-                        <p class="txt-card-info-2">
-                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
-                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
-                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
-                            de México.</p>
-                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
-                    </div>
-                    <!--Card/Footer-->
-                    <div class="card-footer">
-                        <button class="card-btn txt-card-btn">Ver más</button>
-                    </div>
-                </div>
-                <!---->
-                 <!--Card-->
-                 <div class="card">
-                    <!--Card/Header-->
-                    <div class="card-header">
-                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
-                    </div>
-                    <!--Card/Body-->
-                    <div class="card-body">
-                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
-                        <p class="txt-card-info-1">País: México</p>
-                        <p class="txt-card-info-2">
-                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
-                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
-                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
-                            de México.</p>
-                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
-                    </div>
-                    <!--Card/Footer-->
-                    <div class="card-footer">
-                        <button class="card-btn txt-card-btn">Ver más</button>
-                    </div>
-                </div>
-                <!---->
-                <!--Card-->
-                <div class="card">
-                    <!--Card/Header-->
-                    <div class="card-header">
-                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
-                    </div>
-                    <!--Card/Body-->
-                    <div class="card-body">
-                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
-                        <p class="txt-card-info-1">País: México</p>
-                        <p class="txt-card-info-2">
-                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
-                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
-                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
-                            de México.</p>
-                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
-                    </div>
-                    <!--Card/Footer-->
-                    <div class="card-footer">
-                        <button class="card-btn txt-card-btn">Ver más</button>
-                    </div>
-                </div>
-                <!---->
-                 <!--Card-->
-                 <div class="card">
-                    <!--Card/Header-->
-                    <div class="card-header">
-                        <img src="assets/imgs/img-place-01.jpg" class="card-img" alt="Destino">
-                    </div>
-                    <!--Card/Body-->
-                    <div class="card-body">
-                        <h3 class="txt-subtitle-2">El Sol de Toluca</h3>
-                        <p class="txt-card-info-1">País: México</p>
-                        <p class="txt-card-info-2">
-                            El verano ha llegado y es necesario tomar un respiro de la estresante actividad 
-                            constante del trabajo o la escuela. Si planeas ir al mar puedes tomar en cuenta 
-                            estas recomendaciones basadas en el ranking de TripAdvisor sobre las mejores playas 
-                            de México.</p>
-                        <p class="txt-card-info-3">Precio: Desde $400.000</p>
-                    </div>
-                    <!--Card/Footer-->
-                    <div class="card-footer">
-                        <button class="card-btn txt-card-btn">Ver más</button>
-                    </div>
-                </div>
-                <!---->
-
-
-
-
-
-            </section>
-            <!--Main/Index-->
-            <section class="container-index">
-                <ul class="index-menu">
-                    <li class="index-num index-start">
-                        <a class="txt-index" href="#"><<</a>
-                    </li>
-                    <li class="index-num">
-                        <a class="txt-index" href="#">1</a>
-                    </li>
-                    <li class="index-num">
-                        <a class="txt-index" href="#">2</a>
-                    </li>
-                    <li class="index-num">
-                        <a class="txt-index" href="#">3</a>
-                    </li>
-                    <li class="index-num index-end">
-                        <a class="txt-index" href="#">>></a>
-                    </li>
-                </ul>
             </section>
         </main>
         <!--Footer-->
